tests/toylang/neg/001616_mutation.toylang
program a = { while a do program a = { } . sleep; } .
